--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,5 +1,5 @@
 body{overflow:visible;}
-body,ul,ol,dl,dt,dd,h1,h2,h3,h4,h5,h6,dd,p,input{margin:0px;padding:0px;}
+body,ul,ol,dl,dt,dd,p,input{margin:0px;padding:0px;}
 li{list-style-type:none;}
 img,input{border:0px;}
 /* 清除浮动*/
@@ -15,4 +15,3 @@ img,input{border:0px;}
 } 
 a{outline:none;}
 area{outline:none;}
-h1,h2,h3,h4,h5,h6{font-weight: 500;}
